--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -14,8 +14,9 @@
 }
 
 .primary {
+  color: var(--color-light-100);
   background-color: var(--color-accent-500);
-  box-shadow: 0 4px 18px 0 #8c61ff59;
+  box-shadow: 0 4px 18px 0 rgb(140 97 255 / 35%);
 
   &:active {
     background-color: var(--color-accent-700);
@@ -31,13 +32,15 @@
   }
 
   &:disabled {
+    color: var(--color-light-900);
     background-color: var(--color-accent-900);
   }
 }
 
 .secondary {
+  color: var(--color-light-100);
   background-color: var(--color-dark-300);
-  box-shadow: 0 4px 4px 0 #4d566021;
+  box-shadow: 0 2px 10px 0 rgb(109 109 109 / 25%);
 
   &:active {
     background-color: var(--color-dark-500);
@@ -53,6 +56,7 @@
   }
 
   &:disabled {
+    color: var(--color-light-900);
     background-color: var(--color-dark-300);
   }
 }
