--- a/src/components/ui/input/utils/common-styles-input/common-styles-input.scss
+++ b/src/components/ui/input/utils/common-styles-input/common-styles-input.scss
@@ -1,6 +1,6 @@
 @mixin common-styles-input {
-  width: 284px;
-  height: 36px;
+  width: 100%;
+  height: 100%;
 
   background-color: transparent;
   border: 1px solid var(--color-dark-500);
