--- a/src/components/ui/textField/textField.module.scss
+++ b/src/components/ui/textField/textField.module.scss
@@ -4,10 +4,16 @@
   position: relative;
   width: 284px;
   height: 36px;
+  margin: 40px;
 }
 
 .default {
   @include common-styles-input;
+}
+
+button {
+  all: unset;
+  background-color: transparent;
 }
 
 .password {
@@ -35,8 +41,7 @@
   color: var(--color-dark-100);
 }
 
-.eyeIcon,
-.eyeIconOff {
+.eyeIcon {
   position: absolute;
   z-index: 1;
   top: 50%;
@@ -47,6 +52,10 @@
   height: 20px;
 
   color: var(--color-dark-100);
+
+  &:focus-visible {
+    outline: var(--outline-focus);
+  }
 }
 
 .label {
@@ -63,6 +72,13 @@
 .error {
   color: var(--color-danger-300);
   border-color: var(--color-danger-300);
+
+  &:focus {
+    background-color: transparent;
+    border: 2px solid var(--color-danger-300);
+    border-radius: 2px;
+    outline: 1px solid var(--color-danger-300);
+  }
 }
 
 .fullWidth {
