--- a/src/components/ui/textField/utils/common-styles-input/common-styles-input.scss
+++ b/src/components/ui/textField/utils/common-styles-input/common-styles-input.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
 
+  padding-left: 10px;
   background-color: transparent;
   border: 1px solid var(--color-dark-500);
   border-radius: 2px;
