--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -27,26 +27,27 @@
   border: 1px solid var(--color-dark-300);
   border-radius: 2px;
 
-  &:active {
-    border-color: var(--color-dark-100);
-  }
-
   &:disabled {
     border-color: var(--color-dark-300);
+  }
+
+  &:active:enabled {
+    border-color: var(--color-dark-100);
   }
 }
 
 .trigger {
-  &:hover {
+  &:disabled {
+    cursor: default;
+    color: var(--color-dark-300);
+  }
+
+  &:hover:enabled {
     background-color: var(--color-dark-500);
   }
 
-  &:focus {
-    border: 2px solid var(--color-info-700);
-  }
-
-  &:disabled {
-    color: var(--color-dark-300);
+  &:focus:enabled {
+    outline: 2px solid var(--color-info-700);
   }
 
   &[data-state='open'] {
@@ -82,8 +83,4 @@
   min-width: 65px;
   min-height: 24px;
   color: var(--color-dark-100);
-}
-
-.rotate {
-  transform: rotate(180deg);
 }
