--- a/src/components/ui/checkbox/checkbox.module.scss
+++ b/src/components/ui/checkbox/checkbox.module.scss
@@ -7,6 +7,11 @@
 .label {
   cursor: pointer;
   padding-right: 10px;
+
+  &.disabled {
+    cursor: initial;
+    color: var(--color-dark-100);
+  }
 }
 
 .checkbox {
@@ -19,6 +24,20 @@
 
   border: 3px solid var(--color-light-900);
   border-radius: 4px;
+
+  &:disabled {
+    cursor: auto;
+
+    &::before,
+    &::after {
+      transform: translate(-50%, -50%) scale(0);
+      background-color: transparent;
+    }
+
+    .indicator {
+      fill: var(--color-dark-100);
+    }
+  }
 }
 
 .checked {
@@ -26,18 +45,5 @@
 
   .indicator {
     opacity: 1;
-  }
-}
-
-.disabled {
-  .label {
-    cursor: default;
-    color: var(--color-checkbox-disabled);
-  }
-
-  .checkbox {
-    cursor: inherit;
-    color: var(--color-light-700);
-    background-color: var(--color-light-700);
   }
 }
