--- a/src/components/ui/dropDown/dropDown.module.scss
+++ b/src/components/ui/dropDown/dropDown.module.scss
@@ -69,7 +69,6 @@
 .arrow {
   width: 15px;
   height: 8px;
-  margin-bottom: -1px;
 
   fill: var(--color-dark-700);
   stroke: var(--color-dark-500);
@@ -126,11 +125,17 @@
 }
 
 .item {
+  user-select: none;
+
   display: flex;
   flex-direction: row;
   gap: 6px;
   align-items: center;
   justify-content: flex-start;
+
+  color: var(--color-light-100);
+
+  outline: none;
 
   .card {
     border: 1px solid var(--color-dark-300);
