--- a/src/components/ui/tabSwitcher/tabSwither.module.scss
+++ b/src/components/ui/tabSwitcher/tabSwither.module.scss
@@ -8,14 +8,16 @@ input {
 .tabsRoot {
   display: flex;
   flex-direction: column;
-  width: 300px;
-  box-shadow: 0 2px 10px black;
+  width: 110px;
+
+  //box-shadow: 0 2px 10px black;
 }
 
 .TabsList {
   display: flex;
   flex-shrink: 0;
-  border-bottom: 1px solid grey;
+
+  //border-bottom: 1px solid grey;
 }
 
 .TabsTrigger {
@@ -27,37 +29,45 @@ input {
   align-items: center;
   justify-content: center;
 
-  height: 45px;
+  height: 36px;
   padding: 0 20px;
 
   font-family: inherit;
   font-size: 15px;
   line-height: 1;
-  color: grey;
 
-  background-color: white;
+  background-color: transparent;
+  box-shadow: 0 0 0 2px var(--color-dark-300);
 }
 
-.TabsTrigger:first-child {
-  border-top-left-radius: 6px;
-}
-
-.TabsTrigger:last-child {
-  border-top-right-radius: 6px;
-}
+//.TabsTrigger:first-child {
+//  border-top-left-radius: 6px;
+//}
+//
+//.TabsTrigger:last-child {
+//  border-top-right-radius: 6px;
+//}
 
 .TabsTrigger:hover {
-  color: purple;
+  background-color: var(--color-dark-300);
 }
 
-.TabsTrigger[data-state='active'] {
-  color: pink;
-  box-shadow:
-    inset 0 -1px 0 0 currentcolor,
-    0 1px 0 0 currentcolor;
+//.TabsTrigger[data-state='active'] {
+//  box-shadow:
+//    inset 0 -1px 0 0 currentcolor,
+//    0 1px 0 0 currentcolor;
+//}
+
+.TabsTrigger:active {
+  background-color: var(--color-accent-500);
 }
 
 .TabsTrigger:focus {
-  position: relative;
-  box-shadow: 0 0 0 2px black;
+  background-color: var(--color-dark-700);
+  box-shadow: 0 0 0 2px var(--color-info-900);
+}
+
+.TabsTrigger:disabled {
+  background-color: var(--color-dark-700);
+  box-shadow: 0 0 0 2px var(--color-dark-300);
 }
