--- a/src/components/ui/radioGroup/radioGroup.module.scss
+++ b/src/components/ui/radioGroup/radioGroup.module.scss
@@ -1,31 +1,6 @@
-.root {
+.icon {
   cursor: pointer;
 
-  &[data-disabled] {
-    cursor: default;
-    opacity: 0.5;
-  }
-}
-
-.option {
-  all: unset;
-}
-
-.label {
-  display: flex;
-  gap: 2px;
-  align-items: center;
-
-  > label {
-    cursor: pointer;
-
-    [data-disabled] & {
-      cursor: default;
-    }
-  }
-}
-
-.icon {
   position: relative;
 
   display: flex;
@@ -38,7 +13,7 @@
 
   border-radius: 50%;
 
-  transition: var(--transtition-duration-basic) background-color;
+  transition: var(--transition-duration-basic) background-color;
 
   &::before {
     content: '';
@@ -78,6 +53,30 @@
   }
 
   .root[data-disabled] & {
+    cursor: default;
+    opacity: 0.5;
     background-color: var(--color-dark-900);
+
+    .icon {
+      cursor: auto;
+    }
+  }
+}
+
+.option {
+  all: unset;
+}
+
+.label {
+  display: flex;
+  gap: 2px;
+  align-items: center;
+
+  > label {
+    cursor: pointer;
+
+    [data-disabled] & {
+      cursor: default;
+    }
   }
 }
