--- a/src/components/ui/textField/textField.module.scss
+++ b/src/components/ui/textField/textField.module.scss
@@ -1,10 +1,10 @@
-@import 'utils/common-styles-input/common-styles-input';
+@import 'utils/common-styles-textField/common-styles-textField';
 
 .inputContainer {
   position: relative;
   width: 284px;
   height: 36px;
-  margin: 40px;
+  margin-top: 20px;
 }
 
 .iconbutton {
