--- a/src/components/ui/textField/utils/common-styles-textField/common-styles-textField.scss
+++ b/src/components/ui/textField/utils/common-styles-textField/common-styles-textField.scss
@@ -1,26 +1,38 @@
 @mixin common-styles-input {
   width: 100%;
   height: 100%;
-
   padding-left: 10px;
+
   background-color: transparent;
   border: 1px solid var(--color-dark-500);
   border-radius: 2px;
 
+  &:default {
+    color: var(--color-dark-100);
+  }
+
   &:active {
+    color: var(--color-light-100);
     border: 1px solid var(--color-light-100);
   }
 
   &:hover {
+    color: var(--color-dark-100);
     background-color: var(--color-dark-700);
     border: 1px solid var(--color-dark-100);
   }
 
   &:focus {
+    color: var(--color-dark-100);
+
     background-color: transparent;
     border: 2px solid var(--color-info-700);
     border-radius: 2px;
     outline: 1px solid var(--color-info-700);
+  }
+
+  &:disabled {
+    color: var(--color-dark-300);
   }
 
   &.error {
