--- a/src/components/ui/tabSwitcher/tabSwither.module.scss
+++ b/src/components/ui/tabSwitcher/tabSwither.module.scss
@@ -17,6 +17,8 @@ input {
   display: flex;
   flex-shrink: 0;
 
+  //gap: 2px;
+
   //border-bottom: 1px solid grey;
 }
 
@@ -29,15 +31,19 @@ input {
   align-items: center;
   justify-content: center;
 
+  box-sizing: border-box;
   height: 36px;
   padding: 0 20px;
 
   font-family: inherit;
   font-size: 15px;
   line-height: 1;
+  color: var(--color-light-100);
 
   background-color: transparent;
-  box-shadow: 0 0 0 2px var(--color-dark-300);
+  border: 1px solid var(--color-dark-300);
+
+  //box-shadow: 0 0 0 2px var(--color-dark-300);
 }
 
 //.TabsTrigger:first-child {
@@ -47,27 +53,28 @@ input {
 //.TabsTrigger:last-child {
 //  border-top-right-radius: 6px;
 //}
+.TabsTrigger:focus {
+  color: var(--color-light-100);
+  background-color: var(--color-dark-700);
+  border: 2px solid var(--color-info-900);
+}
+
+.TabsTrigger[data-state='active'] {
+  color: var(--color-light-100);
+  background-color: var(--color-accent-500);
+  border: 1px solid var(--color-accent-500);
+
+  //box-shadow: 0 0 0 2px var(--color-accent-500);
+}
 
 .TabsTrigger:hover {
+  color: var(--color-light-900);
   background-color: var(--color-dark-300);
-}
-
-//.TabsTrigger[data-state='active'] {
-//  box-shadow:
-//    inset 0 -1px 0 0 currentcolor,
-//    0 1px 0 0 currentcolor;
-//}
-
-.TabsTrigger:active {
-  background-color: var(--color-accent-500);
-}
-
-.TabsTrigger:focus {
-  background-color: var(--color-dark-700);
-  box-shadow: 0 0 0 2px var(--color-info-900);
+  border: 1px solid var(--color-dark-100);
 }
 
 .TabsTrigger:disabled {
+  color: var(--color-dark-300);
   background-color: var(--color-dark-700);
-  box-shadow: 0 0 0 2px var(--color-dark-300);
+  border: 1px solid var(--color-dark-300);
 }
