-fix styles for tabSwitcher

--- a/src/components/ui/textField/textField.module.scss
+++ b/src/components/ui/textField/textField.module.scss
@@ -20,12 +20,14 @@
 .password {
   @include common-styles-input;
 
-  padding-right: 40px; // Ширина иконки глаза + дополнительный отступ
+  width: 242px;
+  padding-right: 42px; // Ширина иконки глаза + дополнительный отступ
 }
 
 .search {
   @include common-styles-input;
 
+  width: 254px;
   padding-left: 40px; // Это значение должно быть больше, чем левый отступ иконки
 }
 
