--- a/src/components/ui/textField/utils/common-styles-textField/common-styles-textField.scss
+++ b/src/components/ui/textField/utils/common-styles-textField/common-styles-textField.scss
@@ -3,17 +3,14 @@
   height: 100%;
   padding-left: 10px;
 
+  color: var(--color-dark-100);
+
   background-color: transparent;
   border: 1px solid var(--color-dark-500);
   border-radius: 2px;
 
   &:default {
     color: var(--color-dark-100);
-  }
-
-  &:active {
-    color: var(--color-light-100);
-    border: 1px solid var(--color-light-100);
   }
 
   &:hover {
@@ -29,6 +26,11 @@
     border: 2px solid var(--color-info-700);
     border-radius: 2px;
     outline: 1px solid var(--color-info-700);
+  }
+
+  &:active {
+    color: var(--color-light-100);
+    border: 1px solid var(--color-light-100);
   }
 
   &:disabled {
