--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -2,6 +2,7 @@
   all: unset;
 
   cursor: pointer;
+  user-select: none;
 
   display: flex;
   flex-direction: row;
@@ -9,17 +10,16 @@
   align-items: center;
   justify-content: space-between;
 
-  width: 210px;
-  height: 36px;
+  width: 100%;
   padding: 6px 12px;
 
   color: var(--color-light-100);
-  transition: var(--transition-duration-basic) color;
 }
 
 .item {
-  background-color: var(--color-dark-900);
-  transition: var(--transition-duration-basic) background-color;
+  width: calc(100% - 24px);
+  transition: var(--transition-duration-basic) background-color, color;
+
   &:hover {
     color: var(--color-accent-300);
     background-color: var(--color-accent-900);
@@ -27,6 +27,7 @@
 }
 
 .border {
+  width: calc(100% - 24px);
   border: 1px solid var(--color-dark-300);
   border-radius: 2px;
 
@@ -40,8 +41,9 @@
 }
 
 .trigger {
-  background-color: var(--color-dark-900);
-  transition: var(--transition-duration-basic) background-color, var(--transition-duration-basic) color;
+  padding: 6px 12px;
+  transition: var(--transition-duration-basic) background-color, color, outline;
+
   &:disabled {
     cursor: default;
     color: var(--color-dark-300);
@@ -85,7 +87,17 @@
 }
 
 .title {
+  user-select: none;
   min-width: 65px;
   min-height: 24px;
   color: var(--color-dark-100);
+}
+
+.content {
+  width: var(--radix-select-trigger-width);
+  max-height: var(--radix-select-content-available-height);
+}
+
+.size {
+  width: 210px;
 }
