--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -1,3 +1,9 @@
+.root {
+  position: fixed;
+  top: 24px;
+  min-height: 60px;
+}
+
 .select {
   all: unset;
 
@@ -43,6 +49,8 @@
 }
 
 .trigger {
+  position: relative;
+  top: 10px;
   transition:
     var(--transition-duration-basic) background-color,
     color,
@@ -102,8 +110,14 @@
 
 .title {
   user-select: none;
+
+  position: absolute;
+  top: -24px;
+  left: 0;
+
   min-width: 65px;
   min-height: 24px;
+
   color: var(--color-dark-100);
 }
 
