--- a/src/components/ui/dropDown/dropDown.module.scss
+++ b/src/components/ui/dropDown/dropDown.module.scss
@@ -28,6 +28,9 @@
 .content {
   will-change: transform, opacity;
 
+  position: relative;
+  z-index: 2;
+
   display: flex;
   flex-direction: column;
   gap: 12px;
