--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -25,7 +25,9 @@
 .item {
   width: calc(100% - 24px);
   background-color: var(--color-dark-900);
-  transition: var(--transition-duration-basic) background-color, color;
+  transition:
+    var(--transition-duration-basic) background-color,
+    color;
 
   &:hover {
     color: var(--color-accent-300);
@@ -51,7 +53,10 @@
   position: relative;
   top: 24px;
   margin-bottom: 24px;
-  transition: var(--transition-duration-basic) background-color, color, outline;
+  transition:
+    var(--transition-duration-basic) background-color,
+    color,
+    outline;
 
   &:disabled {
     cursor: default;
@@ -119,6 +124,8 @@
 }
 
 .content {
+  position: relative;
+  z-index: 2;
   overflow: hidden;
   width: var(--radix-select-trigger-width);
   max-height: var(--radix-select-content-available-height);
