--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -1,8 +1,3 @@
-.root {
-  top: 24px;
-  min-height: 60px;
-}
-
 .select {
   all: unset;
 
@@ -52,9 +47,14 @@
   top: 12px;
 
   min-height: 24px;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
 
   transition: var(--transition-duration-basic) background-color, color, outline;
+
+  &.error {
+    top: 16px;
+    margin-top: 6px;
+  }
 
   &:disabled {
     cursor: default;
@@ -68,6 +68,11 @@
   &:focus:enabled {
     border-color: var(--color-info-700);
     outline: 1px solid var(--color-info-700);
+
+    &.error {
+      border-color: var(--color-danger-300);
+      outline: 1px solid var(--color-danger-300);
+    }
   }
 
   &[data-state='open'] {
@@ -139,6 +144,22 @@
 }
 
 .error {
+  margin-bottom: 36px;
   border-color: var(--color-danger-300);
   outline: 1px solid var(--color-danger-300);
+}
+
+.marginTop {
+  margin-top: 12px;
+}
+
+.errorMessage {
+  user-select: none;
+
+  position: absolute;
+  top: 36px;
+  left: 0;
+
+  min-width: 65px;
+  min-height: 24px;
 }
