--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -19,7 +19,9 @@
 .item {
   width: calc(100% - 24px);
   background-color: var(--color-dark-900);
-  transition: var(--transition-duration-basic) background-color, color;
+  transition:
+    var(--transition-duration-basic) background-color,
+    color;
 
   &:hover,
   &:focus {
@@ -45,7 +47,10 @@
 .trigger {
   position: relative;
   min-height: 24px;
-  transition: var(--transition-duration-basic) background-color, color, outline;
+  transition:
+    var(--transition-duration-basic) background-color,
+    color,
+    outline;
 
   &:disabled {
     cursor: default;
@@ -137,7 +142,7 @@
 }
 
 .marginTop {
-  margin-top: 20px;
+  margin-top: 24px;
 }
 
 .errorMessage {
