--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -19,7 +19,9 @@
 .item {
   width: calc(100% - 24px);
   background-color: var(--color-dark-900);
-  transition: var(--transition-duration-basic) background-color, color;
+  transition:
+    var(--transition-duration-basic) background-color,
+    color;
 
   &:hover,
   &:focus {
@@ -46,7 +48,10 @@
   position: relative;
   min-height: 24px;
   margin-bottom: 40px;
-  transition: var(--transition-duration-basic) background-color, color, outline;
+  transition:
+    var(--transition-duration-basic) background-color,
+    color,
+    outline;
 
   &:disabled {
     cursor: default;
@@ -117,6 +122,11 @@
   min-height: 24px;
 
   color: var(--color-dark-100);
+}
+
+.disabled {
+  cursor: default;
+  color: var(--color-dark-300);
 }
 
 .content {
