--- a/src/components/ui/checkbox/checkbox.module.scss
+++ b/src/components/ui/checkbox/checkbox.module.scss
@@ -55,7 +55,8 @@
   }
 
   &:not([data-disabled]) {
-    &:hover {
+    &:hover,
+    &:focus-within {
       .background {
         background-color: var(--color-dark-500);
 
