--- a/src/components/ui/textField/textField.module.scss
+++ b/src/components/ui/textField/textField.module.scss
@@ -16,11 +16,11 @@
     }
 
     .icon {
-      position: absolute; // Позиционируем иконку абсолютно внутри родительского элемента
+      position: absolute;
       z-index: 1;
-      top: 50%; // Размещаем её вертикально по центру относительно родительского контейнера
-      left: 12px; // Устанавливаем её слева от поля ввода
-      transform: translateY(-50%); // Дополнительная коррекция для вертикального центрирования
+      top: 50%;
+      left: 12px;
+      transform: translateY(-50%);
 
       width: 20px;
       height: 20px;
