--- a/src/components/auth/recover-password/recover-password.module.scss
+++ b/src/components/auth/recover-password/recover-password.module.scss
@@ -35,10 +35,10 @@
 .signInLink {
   cursor: pointer;
 
-  display: flex;
-  justify-content: center;
-
+  max-width: 420px;
   margin-top: -8px;
+  margin-right: auto;
+  margin-left: auto;
 
   font-size: var(--font-size-m);
   font-weight: var(--font-weight-bold);
