--- a/src/components/auth/check-email/check-email.module.scss
+++ b/src/components/auth/check-email/check-email.module.scss
@@ -21,6 +21,11 @@
 
 .button {
   margin-top: 65px;
+  transition: var(--transition-duration-basic) background-color;
+
+  &:hover {
+    background-color: var(--color-accent-300);
+  }
 }
 
 .text {
