--- a/src/components/auth/recover-password/recover-password.module.scss
+++ b/src/components/auth/recover-password/recover-password.module.scss
@@ -43,6 +43,11 @@
   font-weight: var(--font-weight-bold);
   color: var(--color-accent-500);
   text-decoration: underline;
+  transition: var(--transition-duration-basic) color;
+
+  &:hover {
+    color: var(--color-accent-300);
+  }
 }
 
 .text {
