--- a/src/components/profile/personal-information/personal-information.module.scss
+++ b/src/components/profile/personal-information/personal-information.module.scss
@@ -19,6 +19,10 @@
   width: 100%;
   margin-bottom: 41px;
   padding: 0 36px;
+
+  s.textField {
+    margin-top: 12px;
+  }
 }
 
 .title {
@@ -84,4 +88,18 @@
   &:focus-visible {
     outline: var(--outline-focus);
   }
+}
+
+.saveButton {
+  margin-top: 36px;
+  margin-bottom: 43px;
+}
+
+.textField {
+  margin-top: 12px;
+}
+.changePhotoInput {
+  display: none;
+  visibility: hidden;
+  height: 0;
 }
